--- a/src/component/Meals/MealItem/Footer.module.css
+++ b/src/component/Meals/MealItem/Footer.module.css
@@ -1,5 +1,6 @@
 footer {
   display: block;
+  position: absolute;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   background: #696363;
@@ -7,6 +8,6 @@ footer {
   margin: auto;
   padding-top: 9px;
   padding-bottom: 3%;
-  width: auto;
+  width: 100%;
   height: 30px;
 }
